<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sleep_zikr"
    android:background="#a7d1c9">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sleep1"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/amiri"
            android:layout_marginHorizontal="20dp"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sleep2"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/amiri"
            android:layout_marginHorizontal="20dp"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sleep3"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/amiri"
            android:layout_marginHorizontal="20dp"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sleep4"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/amiri"
            android:layout_marginHorizontal="20dp"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sleep5"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/amiri"
            android:layout_marginHorizontal="20dp"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sleep6"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/amiri"
            android:layout_marginHorizontal="20dp"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sleep7"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/amiri"
            android:layout_marginHorizontal="20dp"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sleep8"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/amiri"
            android:layout_marginHorizontal="20dp"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sleep9"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/amiri"
            android:layout_marginHorizontal="20dp"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sleep10"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/amiri"
            android:layout_marginHorizontal="20dp"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sleep11"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/amiri"
            android:layout_marginHorizontal="20dp"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sleep12"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/amiri"
            android:layout_marginHorizontal="20dp"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sleep13"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/amiri"
            android:layout_marginHorizontal="20dp"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sleep14"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/amiri"
            android:layout_marginHorizontal="20dp"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sleep15"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/amiri"
            android:layout_marginHorizontal="20dp"
            android:textSize="20sp"/>

    </LinearLayout>

</ScrollView>