<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NextActivity"
    tools:actionBarNavMode="tabs"
    android:background="#a7d1c9">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn1"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/sabah_button"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/btn2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/massaa_button"
            android:textSize="20sp" />
        <Button
            android:id="@+id/btn3"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/sleep_button"
            android:textSize="20sp" />
        <Button
            android:id="@+id/btn4"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/wakeup_button"
            android:textSize="20sp" />
        <Button
            android:id="@+id/btn5"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/aftarsalat_button"
            android:textSize="20sp" />


    </LinearLayout>
</ScrollView>